--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,15 +12,14 @@
     <header class="header" >
         <h1 class="logo" >
             <a href="">
-                <img src="" alt="Logo">
+                <img src="./imgs/logo.png" alt="Logo">
             </a> 
         </h1>
 
         <nav class="nav" >
-            <a href="#login">Login</a>
-            <a href="./pages/">Produtos</a>
+            <a href="./pages/">Loja</a>
             <a href="./pages/">Sobre</a>
-            <a href="./pages/cadUsuario.html">cadastro</a>
+            <a href="./pages/cadUsuario.html">Cadastre-se</a>
         </nav>
     </header>
 
