--- a/frontend/pages/cadUsuario.html
+++ b/frontend/pages/cadUsuario.html
@@ -12,11 +12,11 @@
 <body>
     <header class="header">
         <h1 class="logo">
-            <img src="" alt="Logo" class="logo-img" onclick="window.location = '../index.html'">
+            <img src="../imgs/logo.png" alt="Logo" class="logo-img" onclick="window.location = '../index.html'">
         </h1>
         <nav class="nav">
             <a href="../index.html">Login</a>
-            <a href="">Produtos</a>
+            <a href="">Loja</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
