--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,15 +11,17 @@
 <body>
     <header class="header" >
         <h1 class="logo" >
-            <a href="">
+            <a href="./index.html">
                 <img src="./imgs/logo.png" alt="Logo">
             </a> 
         </h1>
 
         <nav class="nav" >
-            <a href="./pages/">Loja</a>
-            <a href="./pages/">Sobre</a>
+            <a href="./pages/loja.html">Loja</a>
+            <a href="./pages/sobre.html">Sobre</a>
             <a href="./pages/cadUsuario.html">Cadastre-se</a>
+            <button id="btnLogout" type="submit">Logout</button>
+
         </nav>
     </header>
 
@@ -39,6 +41,7 @@
             </form>
         </div>
     </section>
+    
 
     <footer class="footer" >
         <p>© 2025 ShonenDrip. Todos os direitos reservados.</p>
