--- a/frontend/pages/cadUsuario.html
+++ b/frontend/pages/cadUsuario.html
@@ -16,7 +16,7 @@
         </h1>
         <nav class="nav">
             <a href="../index.html">Login</a>
-            <a href="">Loja</a>
+            <a href="../pages/loja.html">Loja</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
